--- a/config/rofi/config
+++ b/config/rofi/config
@@ -1,3 +1,4 @@
+# real config 
 rofi.modi: run,combi
 rofi.lines: 5
 rofi.eh: 1
@@ -6,10 +7,10 @@ rofi.padding: 800
 rofi.opacity: 85
 rofi.bw: 0
 rofi.color-window: argb:7F333333 ,argb:7f333333,argb:7f333333
-#		   background       font    background2       active        active font
-rofi.color-normal: #cc00ff,   #000000,#0066ff,    #00ffff,#000000 
-rofi.color-urgent: #ff0000,  #000000,#ff0000,    #ff0000,#000000
-rofi.color-active: #cc00ff,   #000000,#0066ff,    #00ffff,#000000
+#		           Background       font         background2         active        active font
+rofi.color-normal: #000000,         #ffffff,     #000000,            #ffffff,      #000000 
+rofi.color-urgent: #ff0000,         #000000,     #ff0000,            #ff0000,      #000000
+rofi.color-active: #ffffff,         #000000,     #0066ff,            #00ffff,      #000000
 rofi.terminal: rofi-sensible-terminal
 rofi.line-margin: 3 
 rofi.hide-scrollbar: true
